Fix z-index of flyout scrollbars so it's above the flyout. (#3088)
* Fix z-index of flyout scrollbars so it's above the flyout.

* Fix for mobile view issue with editor toolbar restricting access to the scrollbar behind it.

--- a/theme/blockly-core.less
+++ b/theme/blockly-core.less
@@ -14,10 +14,9 @@
     z-index: 105;
 }
 
-/* Set Z index of the Blockly scrollbars to be beneath the BlocklyWidgetDiv */
-.blocklyScrollbarHorizontal, .blocklyScrollbarVertical {
-    z-index: 8 !important;
-}
+/* Blockly z-index: */
+/* blocklyFlyout: 20 */
+/* blocklyFlyoutScrollbar: 30 */
 
 .blocklyTooltipDiv {
     border:none !important;
